--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,9 +50,18 @@
             font-size: 0.82rem;
             font-weight: 600;
             color: #ccc;
-            margin-bottom: 6px;
+            margin-bottom: 2px;
             text-transform: uppercase;
             letter-spacing: 0.5px;
+        }
+
+        .hint {
+            display: block;
+            font-size: 0.74rem;
+            color: #888;
+            margin-bottom: 6px;
+            font-weight: 400;
+            line-height: 1.3;
         }
 
         input {
@@ -165,21 +174,25 @@
         <form id="predictForm">
             <div class="form-group">
                 <label for="active_users">Active Users</label>
+                <span class="hint">Total number of users currently connected to the server</span>
                 <input type="number" id="active_users" placeholder="e.g. 300" required />
             </div>
 
             <div class="form-group">
-                <label for="time_of_day">Time of Day (0-23)</label>
-                <input type="number" id="time_of_day" min="0" max="23" placeholder="e.g. 12" required />
+                <label for="time_of_day">Time of Day (0–23)</label>
+                <span class="hint">Current hour in 24-hour format (0 = midnight, 12 = noon, 23 = 11 PM)</span>
+                <input type="number" id="time_of_day" min="0" max="23" placeholder="e.g. 14" required />
             </div>
 
             <div class="form-group">
                 <label for="background_jobs">Background Jobs</label>
+                <span class="hint">Number of scheduled tasks running in the background (backups, cron jobs, etc.)</span>
                 <input type="number" id="background_jobs" placeholder="e.g. 5" required />
             </div>
 
             <div class="form-group">
                 <label for="db_latency_ms">DB Latency (ms)</label>
+                <span class="hint">Average database response time in milliseconds — higher values indicate heavier load</span>
                 <input type="number" id="db_latency_ms" placeholder="e.g. 30" required />
             </div>
 
