--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,71 +7,83 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
+        html, body {
+            height: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
+            padding: 20px;
             color: #e0e0e0;
         }
 
-        .container {
-            background: rgba(255, 255, 255, 0.06);
-            backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.12);
-            border-radius: 20px;
-            padding: 40px 48px;
-            width: 460px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+        .page-wrapper {
+            width: 100%;
+            max-width: 900px;
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
         }
 
+        /* ── Header ── */
         h1 {
-            text-align: center;
-            font-size: 1.6rem;
-            margin-bottom: 8px;
+            font-size: 1.5rem;
             color: #fff;
+            text-align: center;
         }
 
         .subtitle {
-            text-align: center;
-            font-size: 0.85rem;
+            font-size: 0.82rem;
             color: #aaa;
-            margin-bottom: 28px;
+            text-align: center;
+            margin-top: 2px;
         }
 
-        .form-group {
-            margin-bottom: 18px;
+        /* ── Form grid — 2 × 2 ── */
+        form {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 14px;
+        }
+
+        .field-card {
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            border-radius: 14px;
+            padding: 14px 18px;
+            display: flex;
+            flex-direction: column;
+            gap: 3px;
         }
 
         label {
-            display: block;
-            font-size: 0.82rem;
+            font-size: 0.78rem;
             font-weight: 600;
-            color: #ccc;
-            margin-bottom: 2px;
+            color: #e0e0e0;
             text-transform: uppercase;
-            letter-spacing: 0.5px;
+            letter-spacing: 0.4px;
         }
 
         .hint {
-            display: block;
-            font-size: 0.74rem;
-            color: #888;
-            margin-bottom: 6px;
-            font-weight: 400;
+            font-size: 0.7rem;
+            color: #999;
             line-height: 1.3;
         }
 
         input {
             width: 100%;
-            padding: 12px 16px;
+            padding: 10px 12px;
+            margin-top: 4px;
             border: 1px solid rgba(255, 255, 255, 0.15);
-            border-radius: 10px;
+            border-radius: 8px;
             background: rgba(255, 255, 255, 0.07);
             color: #fff;
-            font-size: 1rem;
+            font-size: 0.95rem;
             outline: none;
             transition: border-color 0.2s, box-shadow 0.2s;
         }
@@ -83,9 +95,14 @@
 
         input::placeholder { color: #666; }
 
+        /* ── Button spans full width ── */
+        .btn-card {
+            grid-column: 1 / -1;
+        }
+
         .btn {
             width: 100%;
-            padding: 14px;
+            padding: 13px;
             border: none;
             border-radius: 12px;
             background: linear-gradient(135deg, #6c63ff, #4834d4);
@@ -93,7 +110,6 @@
             font-size: 1rem;
             font-weight: 700;
             cursor: pointer;
-            margin-top: 8px;
             transition: transform 0.15s, box-shadow 0.15s;
             letter-spacing: 0.5px;
         }
@@ -114,11 +130,10 @@
 
         /* ── Result card ── */
         .result {
-            margin-top: 24px;
-            padding: 20px;
-            border-radius: 14px;
-            background: rgba(108, 99, 255, 0.1);
-            border: 1px solid rgba(108, 99, 255, 0.25);
+            background: rgba(255, 255, 255, 0.06);
+            border: 1px solid rgba(255, 255, 255, 0.12);
+            border-radius: 16px;
+            padding: 22px 30px;
             text-align: center;
             display: none;
         }
@@ -126,11 +141,11 @@
         .result.visible { display: block; animation: fadeIn 0.35s ease; }
 
         .result-label {
-            font-size: 0.8rem;
+            font-size: 0.75rem;
             text-transform: uppercase;
             letter-spacing: 1px;
             color: #aaa;
-            margin-bottom: 6px;
+            margin-bottom: 4px;
         }
 
         .result-value {
@@ -141,19 +156,29 @@
 
         .result-value span { font-size: 1rem; font-weight: 400; color: #999; }
 
-        /* colour coding */
         .result-value.low  { color: #2ecc71; }
         .result-value.mid  { color: #f39c12; }
         .result-value.high { color: #e74c3c; }
 
+        .result-explanation {
+            margin-top: 10px;
+            font-size: 0.8rem;
+            line-height: 1.5;
+            color: #bbb;
+        }
+
+        .result-explanation strong { font-weight: 700; }
+        .result-explanation.low  strong { color: #2ecc71; }
+        .result-explanation.mid  strong { color: #f39c12; }
+        .result-explanation.high strong { color: #e74c3c; }
+
         .error-msg {
-            margin-top: 16px;
-            padding: 12px;
-            border-radius: 10px;
-            background: rgba(231, 76, 60, 0.15);
+            padding: 14px;
+            border-radius: 12px;
+            background: rgba(231, 76, 60, 0.12);
             border: 1px solid rgba(231, 76, 60, 0.3);
             color: #e74c3c;
-            font-size: 0.85rem;
+            font-size: 0.82rem;
             text-align: center;
             display: none;
         }
@@ -161,50 +186,59 @@
         .error-msg.visible { display: block; animation: fadeIn 0.35s ease; }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(8px); }
+            from { opacity: 0; transform: translateY(6px); }
             to   { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>CPU Usage Predictor</h1>
-        <p class="subtitle">Enter server metrics to predict CPU usage&nbsp;%</p>
+    <div class="page-wrapper">
+
+        <div>
+            <h1>CPU Usage Predictor</h1>
+            <p class="subtitle">Enter server metrics to predict CPU usage&nbsp;%</p>
+        </div>
 
         <form id="predictForm">
-            <div class="form-group">
+
+            <div class="field-card">
                 <label for="active_users">Active Users</label>
-                <span class="hint">Total number of users currently connected to the server</span>
+                <span class="hint">Users currently connected to the server</span>
                 <input type="number" id="active_users" placeholder="e.g. 300" required />
             </div>
 
-            <div class="form-group">
+            <div class="field-card">
                 <label for="time_of_day">Time of Day (0–23)</label>
-                <span class="hint">Current hour in 24-hour format (0 = midnight, 12 = noon, 23 = 11 PM)</span>
+                <span class="hint">Hour in 24h format (0 = midnight, 12 = noon)</span>
                 <input type="number" id="time_of_day" min="0" max="23" placeholder="e.g. 14" required />
             </div>
 
-            <div class="form-group">
+            <div class="field-card">
                 <label for="background_jobs">Background Jobs</label>
-                <span class="hint">Number of scheduled tasks running in the background (backups, cron jobs, etc.)</span>
+                <span class="hint">Scheduled tasks running (backups, cron jobs, etc.)</span>
                 <input type="number" id="background_jobs" placeholder="e.g. 5" required />
             </div>
 
-            <div class="form-group">
+            <div class="field-card">
                 <label for="db_latency_ms">DB Latency (ms)</label>
-                <span class="hint">Average database response time in milliseconds — higher values indicate heavier load</span>
+                <span class="hint">Avg database response time — higher = heavier load</span>
                 <input type="number" id="db_latency_ms" placeholder="e.g. 30" required />
             </div>
 
-            <button type="submit" class="btn" id="submitBtn">Predict CPU Usage</button>
+            <div class="btn-card">
+                <button type="submit" class="btn" id="submitBtn">Predict CPU Usage</button>
+            </div>
+
         </form>
 
         <div class="result" id="resultCard">
             <div class="result-label">Predicted CPU Usage</div>
             <div class="result-value" id="resultValue">—</div>
+            <div class="result-explanation" id="resultExplanation"></div>
         </div>
 
         <div class="error-msg" id="errorMsg"></div>
+
     </div>
 
     <script>
@@ -212,9 +246,10 @@
 
         const form      = document.getElementById('predictForm');
         const submitBtn = document.getElementById('submitBtn');
-        const resultCard  = document.getElementById('resultCard');
-        const resultValue = document.getElementById('resultValue');
-        const errorMsg    = document.getElementById('errorMsg');
+        const resultCard    = document.getElementById('resultCard');
+        const resultValue   = document.getElementById('resultValue');
+        const resultExpl    = document.getElementById('resultExplanation');
+        const errorMsg      = document.getElementById('errorMsg');
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -252,6 +287,19 @@
 
                 resultValue.className = 'result-value ' + cls;
                 resultValue.innerHTML = `${pct.toFixed(1)} <span>%</span>`;
+
+                // Build a human-readable explanation of the result
+                let explanation = '';
+                if (cls === 'low') {
+                    explanation = `With <strong>${payload.active_users}</strong> active users, <strong>${payload.background_jobs}</strong> background jobs, and <strong>${payload.db_latency_ms} ms</strong> database latency at hour <strong>${payload.time_of_day}</strong>, the server is under <strong>low load</strong>. CPU resources are largely available — no action needed.`;
+                } else if (cls === 'mid') {
+                    explanation = `With <strong>${payload.active_users}</strong> active users, <strong>${payload.background_jobs}</strong> background jobs, and <strong>${payload.db_latency_ms} ms</strong> database latency at hour <strong>${payload.time_of_day}</strong>, the server is experiencing <strong>moderate load</strong>. Consider monitoring trends — usage may climb if traffic increases.`;
+                } else {
+                    explanation = `With <strong>${payload.active_users}</strong> active users, <strong>${payload.background_jobs}</strong> background jobs, and <strong>${payload.db_latency_ms} ms</strong> database latency at hour <strong>${payload.time_of_day}</strong>, the server is under <strong>heavy load</strong>. Consider scaling resources or reducing background tasks to prevent degradation.`;
+                }
+                resultExpl.className = 'result-explanation ' + cls;
+                resultExpl.innerHTML = explanation;
+
                 resultCard.classList.add('visible');
             } catch (err) {
                 errorMsg.textContent = err.message;
