--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,192 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CPU Usage Predictor</title>
-    <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
-        html, body {
-            height: 100%;
-            overflow: hidden;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            color: #e0e0e0;
-        }
-
-        .page-wrapper {
-            width: 100%;
-            max-width: 900px;
-            display: flex;
-            flex-direction: column;
-            gap: 16px;
-        }
-
-        /* ── Header ── */
-        h1 {
-            font-size: 1.5rem;
-            color: #fff;
-            text-align: center;
-        }
-
-        .subtitle {
-            font-size: 0.82rem;
-            color: #aaa;
-            text-align: center;
-            margin-top: 2px;
-        }
-
-        /* ── Form grid — 2 × 2 ── */
-        form {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 14px;
-        }
-
-        .field-card {
-            background: rgba(255, 255, 255, 0.06);
-            border: 1px solid rgba(255, 255, 255, 0.12);
-            border-radius: 14px;
-            padding: 14px 18px;
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-        }
-
-        label {
-            font-size: 0.78rem;
-            font-weight: 600;
-            color: #e0e0e0;
-            text-transform: uppercase;
-            letter-spacing: 0.4px;
-        }
-
-        .hint {
-            font-size: 0.7rem;
-            color: #999;
-            line-height: 1.3;
-        }
-
-        input {
-            width: 100%;
-            padding: 10px 12px;
-            margin-top: 4px;
-            border: 1px solid rgba(255, 255, 255, 0.15);
-            border-radius: 8px;
-            background: rgba(255, 255, 255, 0.07);
-            color: #fff;
-            font-size: 0.95rem;
-            outline: none;
-            transition: border-color 0.2s, box-shadow 0.2s;
-        }
-
-        input:focus {
-            border-color: #6c63ff;
-            box-shadow: 0 0 0 3px rgba(108, 99, 255, 0.25);
-        }
-
-        input::placeholder { color: #666; }
-
-        /* ── Button spans full width ── */
-        .btn-card {
-            grid-column: 1 / -1;
-        }
-
-        .btn {
-            width: 100%;
-            padding: 13px;
-            border: none;
-            border-radius: 12px;
-            background: linear-gradient(135deg, #6c63ff, #4834d4);
-            color: #fff;
-            font-size: 1rem;
-            font-weight: 700;
-            cursor: pointer;
-            transition: transform 0.15s, box-shadow 0.15s;
-            letter-spacing: 0.5px;
-        }
-
-        .btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(108, 99, 255, 0.4);
-        }
-
-        .btn:active { transform: translateY(0); }
-
-        .btn:disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
-            transform: none;
-            box-shadow: none;
-        }
-
-        /* ── Result card ── */
-        .result {
-            background: rgba(255, 255, 255, 0.06);
-            border: 1px solid rgba(255, 255, 255, 0.12);
-            border-radius: 16px;
-            padding: 22px 30px;
-            text-align: center;
-            display: none;
-        }
-
-        .result.visible { display: block; animation: fadeIn 0.35s ease; }
-
-        .result-label {
-            font-size: 0.75rem;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            color: #aaa;
-            margin-bottom: 4px;
-        }
-
-        .result-value {
-            font-size: 2.4rem;
-            font-weight: 800;
-            color: #6c63ff;
-        }
-
-        .result-value span { font-size: 1rem; font-weight: 400; color: #999; }
-
-        .result-value.low  { color: #2ecc71; }
-        .result-value.mid  { color: #f39c12; }
-        .result-value.high { color: #e74c3c; }
-
-        .result-explanation {
-            margin-top: 10px;
-            font-size: 0.8rem;
-            line-height: 1.5;
-            color: #bbb;
-        }
-
-        .result-explanation strong { font-weight: 700; }
-        .result-explanation.low  strong { color: #2ecc71; }
-        .result-explanation.mid  strong { color: #f39c12; }
-        .result-explanation.high strong { color: #e74c3c; }
-
-        .error-msg {
-            padding: 14px;
-            border-radius: 12px;
-            background: rgba(231, 76, 60, 0.12);
-            border: 1px solid rgba(231, 76, 60, 0.3);
-            color: #e74c3c;
-            font-size: 0.82rem;
-            text-align: center;
-            display: none;
-        }
-
-        .error-msg.visible { display: block; animation: fadeIn 0.35s ease; }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(6px); }
-            to   { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+    <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
     <div class="page-wrapper">
@@ -241,74 +56,6 @@
 
     </div>
 
-    <script>
-        const API_URL = window.location.origin;
-
-        const form      = document.getElementById('predictForm');
-        const submitBtn = document.getElementById('submitBtn');
-        const resultCard    = document.getElementById('resultCard');
-        const resultValue   = document.getElementById('resultValue');
-        const resultExpl    = document.getElementById('resultExplanation');
-        const errorMsg      = document.getElementById('errorMsg');
-
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            errorMsg.classList.remove('visible');
-            resultCard.classList.remove('visible');
-            submitBtn.disabled = true;
-            submitBtn.textContent = 'Predicting…';
-
-            const payload = {
-                active_users:    parseFloat(document.getElementById('active_users').value),
-                time_of_day:     parseFloat(document.getElementById('time_of_day').value),
-                background_jobs: parseFloat(document.getElementById('background_jobs').value),
-                db_latency_ms:   parseFloat(document.getElementById('db_latency_ms').value),
-            };
-
-            try {
-                const res = await fetch(`${API_URL}/predict`, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(payload),
-                });
-
-                if (!res.ok) {
-                    const detail = await res.json();
-                    throw new Error(detail.detail || `Server error ${res.status}`);
-                }
-
-                const data = await res.json();
-                const pct  = data.cpu_usage_pct;
-
-                // colour-code the result
-                let cls = 'low';
-                if (pct > 75)      cls = 'high';
-                else if (pct > 40) cls = 'mid';
-
-                resultValue.className = 'result-value ' + cls;
-                resultValue.innerHTML = `${pct.toFixed(1)} <span>%</span>`;
-
-                // Build a human-readable explanation of the result
-                let explanation = '';
-                if (cls === 'low') {
-                    explanation = `With <strong>${payload.active_users}</strong> active users, <strong>${payload.background_jobs}</strong> background jobs, and <strong>${payload.db_latency_ms} ms</strong> database latency at hour <strong>${payload.time_of_day}</strong>, the server is under <strong>low load</strong>. CPU resources are largely available — no action needed.`;
-                } else if (cls === 'mid') {
-                    explanation = `With <strong>${payload.active_users}</strong> active users, <strong>${payload.background_jobs}</strong> background jobs, and <strong>${payload.db_latency_ms} ms</strong> database latency at hour <strong>${payload.time_of_day}</strong>, the server is experiencing <strong>moderate load</strong>. Consider monitoring trends — usage may climb if traffic increases.`;
-                } else {
-                    explanation = `With <strong>${payload.active_users}</strong> active users, <strong>${payload.background_jobs}</strong> background jobs, and <strong>${payload.db_latency_ms} ms</strong> database latency at hour <strong>${payload.time_of_day}</strong>, the server is under <strong>heavy load</strong>. Consider scaling resources or reducing background tasks to prevent degradation.`;
-                }
-                resultExpl.className = 'result-explanation ' + cls;
-                resultExpl.innerHTML = explanation;
-
-                resultCard.classList.add('visible');
-            } catch (err) {
-                errorMsg.textContent = err.message;
-                errorMsg.classList.add('visible');
-            } finally {
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Predict CPU Usage';
-            }
-        });
-    </script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
